corrected modal display, added shift name and made more use of Shift Lead data

--- a/css/style.css
+++ b/css/style.css
@@ -360,8 +360,9 @@ select {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 65%;
-  height: 50vh;
+  width: 80%;
+  height: 65vh;
+  padding: 2rem 1rem;
   background-color: rgba(0,0,0, 0.95);
   z-index: 200;
   border: none;
